@startuml
'https://plantuml.com/class-diagram

abstract class CongTyDuy{
- String ten
+{abstract} String thongTin()
+{abstract} void them(CongTyDuy congTyDuy)
+{abstract} void xoa(CongTyDuy congTyDuy)
}
class NhanVienDuy{
-String soDienThoai, email
}
class NoiLamViecDuy
NhanVienDuy --|> CongTyDuy
NoiLamViecDuy --|> CongTyDuy
NoiLamViecDuy *--> CongTyDuy: noiLamViec

@enduml